[package]
name = "vetkd_py"
version = "0.1.0"
edition = "2021"
description = "VetKD transport-key unwrap and IBE decrypt for Haven-AOL (Python bindings via PyO3)"
license = "MIT"

[lib]
name = "vetkd_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
ic-vetkeys = "0.6"
ic-cdk = "0.19"
rand = "0.8"
