[package]
name = "vetkd_py"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "VetKD transport-key unwrap and IBE decrypt for Haven-AOL (Python bindings via PyO3)"
license = "MIT"

[lib]
name = "vetkd_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
ic-vetkeys = "0.7"
# VetKDKeyId / VetKDCurve must match ic-vetkeys (via ic-cdk-management-canister).
ic-management-canister-types = "0.7"
rand = "0.8"
