[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vetkd_py"
version = "0.1.0"
description = "VetKD transport-key unwrap and IBE decrypt for Haven-AOL"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vetkd_py"
